[gd_scene load_steps=35 format=2]

[ext_resource path="res://content/gadgets/orchard/OrchardRoot.gd" type="Script" id=1]
[ext_resource path="res://content/gadgets/orchard/roots_ref-Sheet.png" type="Texture" id=2]
[ext_resource path="res://content/gadgets/orchard/Branch.wav" type="AudioStream" id=3]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=4]
[ext_resource path="res://content/sounds/Bastards/sfx_kick01.wav" type="AudioStream" id=5]
[ext_resource path="res://content/sounds/Locations/Orchard/Roots.wav" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 0, 21, 43, 21 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 43, 21, 43, 21 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 86, 21, 43, 21 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 129, 21, 43, 21 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 43, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 86, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 129, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 172, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 215, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 258, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 301, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 344, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 387, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 430, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 430, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 387, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 344, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 301, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 258, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 215, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 172, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 129, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 86, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 43, 0, 43, 21 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 43, 21 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": false,
"name": "catch",
"speed": 8.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "grow",
"speed": 10.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": false,
"name": "shrink",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 5.0
height = 12.0

[node name="OrchardRoot" type="Area2D" groups=["orchard-root", "pauseL"]]
collision_layer = 0
collision_mask = 524288
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -9 )
frames = SubResource( 7 )
animation = "shrink"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
rotation = 1.5708
shape = SubResource( 14 )

[node name="Tween" type="Tween" parent="."]

[node name="RootsBreakSound" parent="." instance=ExtResource( 4 )]
stream = ExtResource( 3 )
volume_db = -6.992
pitch_scale = 0.84
bus = "World"

[node name="RootsBreakSound2" parent="RootsBreakSound" instance=ExtResource( 4 )]
stream = ExtResource( 5 )
volume_db = -9.303
pitch_scale = 1.54
bus = "World"

[node name="RootingEnemySound" parent="." instance=ExtResource( 4 )]
stream = ExtResource( 6 )
volume_db = 1.252
pitch_scale = 1.52
bus = "World"
randomVolume = 0.8

[connection signal="area_entered" from="." to="." method="_on_OrchardRoot_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_OrchardRoot_area_exited"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
